--- a/src/Presentacion/frmgestion_inventario.form
+++ b/src/Presentacion/frmgestion_inventario.form
@@ -126,6 +126,7 @@
                 <Column editable="true" title="Title 4" type="java.lang.Object"/>
               </Table>
             </Property>
+            <Property name="columnSelectionAllowed" type="boolean" value="true"/>
           </Properties>
         </Component>
       </SubComponents>
